fix Dockerfile