@@ -14,7 +14,7 @@ ADD 71-apt-cacher-ng /etc/apt/apt.conf.d/71-apt-cacher-ng
 
 ENV GS_VERSION 2.9.2
 ENV GEOSERVER_DATA_DIR /opt/geoserver/data_dir
-ENV GEOSERVER_OPTS "-Djava.awt.headless=true -server -Xms2G -Xmx4G -Xrs -XX:PerfDataSamplingInterval=500 -XX:MaxPermSize=512m -Dorg.geotools.referencing.forceXY=true -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParallelGC -XX:NewRatio=2"  
+ENV GEOSERVER_OPTS "-Djava.awt.headless=true -server -Xms2G -Xmx4G -Xrs -XX:PerfDataSamplingInterval=500 -Dorg.geotools.referencing.forceXY=true -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParallelGC -XX:NewRatio=2"  
 ENV JAVA_OPTS "$JAVA_OPTS $GEOSERVER_OPTS"
 ENV GDAL_DATA /usr/local/gdal_data
 ENV LD_LIBRARY_PATH /usr/local/gdal_native_libs
@@ -22,8 +22,8 @@ ENV LD_LIBRARY_PATH /usr/local/gdal_native_libs
 RUN mkdir -p $GEOSERVER_DATA_DIR
 
 # Unset Java related ENVs since they may change with Oracle JDK
-ENV JAVA_VERSION
-ENV JAVA_DEBIAN_VERSION
+ENV JAVA_VERSION=
+ENV JAVA_DEBIAN_VERSION=
 
 # Set JAVA_HOME to /usr/lib/jvm/default-java and link it to OpenJDK installation
 RUN ln -s /usr/lib/jvm/java-8-openjdk-amd64 /usr/lib/jvm/default-java
